# job_hunter_crew

./: README.md  pyproject.toml  report.md
src/job_hunter_crew/: crew.py  main.py
src/job_hunter_crew/assets/: query.py
src/job_hunter_crew/config/: agents.yaml  tasks.yaml
